--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ def firstCopyrightYear = 2022
 def buildDate          = new Date()
 def currentYear        = Calendar.getInstance().get(Calendar.YEAR)
 def vendorName         = "d-coding GmbH"
-def vendorUrl          = "https://www.d-coding.de/"
+def vendorUrl          = "https://www.d-coding.de"
 
 def tz = TimeZone.getTimeZone("UTC")
 def df = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss'Z'")
@@ -40,6 +40,10 @@ subprojects {
     withJavadocJar()
   }
 
+  ext {
+    projectDescription = ""
+  }
+
   jar {
     onlyIf {
       !sourceSets.main.allSource.files.isEmpty()
@@ -61,25 +65,38 @@ subprojects {
     }
   }
 
-  publishing {
-    publications {
-      "$project.name"(MavenPublication) {
-        pom {
-          artifactId = project.name
-          from components.java
-          organization {
-            name = vendorName
-            url  = vendorUrl
-          }
-          licenses {
-            license {
-              name = "The Apache License, Version 2.0"
-              url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
-            }
-          }
-          scm {
-            connection = "scm:git:https://github.com/d-codingGmbH/java-json-toolkit.git"
+  afterEvaluate {
+    publishing {
+      publications {
+        "$project.name"(MavenPublication) {
+          pom {
+            artifactId = project.name
+            from components.java
+            name = "${group}:${project.name}"
+            description = projectDescription
             url = "https://github.com/d-codingGmbH/java-json-toolkit"
+            organization {
+              name = vendorName
+              url  = vendorUrl
+            }
+            developers {
+              developer {
+                name = "David Ullrich"
+                email = "david.ullrich@d-coding.de"
+                organization = vendorName
+                organizationUrl = vendorUrl
+              }
+            }
+            licenses {
+              license {
+                name = "The Apache License, Version 2.0"
+                url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
+              }
+            }
+            scm {
+              connection = "scm:git:https://github.com/d-codingGmbH/java-json-toolkit.git"
+              url = "https://github.com/d-codingGmbH/java-json-toolkit"
+            }
           }
         }
       }
