--- a/json-toolkit-text/build.gradle
+++ b/json-toolkit-text/build.gradle
@@ -2,3 +2,5 @@ dependencies {
   testImplementation "io.cucumber:cucumber-java:7.0.0"
   testImplementation "io.cucumber:cucumber-junit:7.0.0"
 }
+
+ext.set("projectDescription", "Java library for serializing, deserializing of textual JSON values into specific Java object hierarchies.")
