--- a/json-toolkit-text/build.gradle
+++ b/json-toolkit-text/build.gradle
@@ -1,6 +1,10 @@
+compileJava {
+  options.release = 8
+}
+
 dependencies {
-  testImplementation "io.cucumber:cucumber-java:7.0.0"
-  testImplementation "io.cucumber:cucumber-junit:7.0.0"
+  testImplementation "io.cucumber:cucumber-java:7.2.3"
+  testImplementation "io.cucumber:cucumber-junit:7.2.3"
 }
 
 ext.set("projectDescription", "Java library for serializing, deserializing of textual JSON values into specific Java object hierarchies.")
